@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST sphinxcontrib-httpdomain-1.0.tar.gz 5874 RMD160 3302f10323c75e282eacac530ec4bce27d9e33f2 SHA1 52f5bd3fce9a141361bf5146563a3ac1bde6e3ff SHA256 ad7d03363570cd23726004f0985e8cbee230b14aa9c2195ce68b4e32b7fa07aa
 DIST sphinxcontrib-httpdomain-1.1.2.tar.gz 6873 RMD160 e5ba9d2cdbbedf663241db14c4355c8602cca387 SHA1 56e1e42c887ed5d80c2a9b1e4b043dd19db0c288 SHA256 97ad05755192afe236dfbfc626d6363033d3d3a756364d77d08c2bf7a69dfcc2
+DIST sphinxcontrib-httpdomain-1.1.4.tar.gz 6899 RMD160 d224d90286cf7dddec7a6c3ee87a4e3c7a8150e8 SHA1 ceeb8e81b59303d47b3dc40c73acd1618686c3c9 SHA256 5950c776696bd5c14efa953441a3c96472119640c918b6ec4e934f4de0ee7d67
 EBUILD sphinxcontrib-httpdomain-1.0.ebuild 677 RMD160 59d1bdf626c4fbe9fbb0d6660c72bf8dd1f9b2ca SHA1 b42a34182785c017157c984a528a09500f21472b SHA256 ab8d093e86a9d04214360596ef11e4d2d2d010744bd68f5ea448b7abd44209dd
 EBUILD sphinxcontrib-httpdomain-1.1.2.ebuild 641 RMD160 8aa7f94b2a3893be90126e619f0d8032fe81ed7a SHA1 cef49237cbbc1208682c3d4175122771576cf014 SHA256 758a12d90cfc047677f44b21551053094084b08c6806e826a16f4e20a4cd4d23
-MISC ChangeLog 692 RMD160 351c7c28f704887ec616292c90ba40acd93749e0 SHA1 9c5319283f8e6f65e562e1cc11d8341bfb5fc3ab SHA256 46ec2a4269337e176ac380c67ee4ede1e967570553a49f8b5169bc559cc429eb
+EBUILD sphinxcontrib-httpdomain-1.1.4.ebuild 641 RMD160 8aa7f94b2a3893be90126e619f0d8032fe81ed7a SHA1 cef49237cbbc1208682c3d4175122771576cf014 SHA256 758a12d90cfc047677f44b21551053094084b08c6806e826a16f4e20a4cd4d23
+MISC ChangeLog 849 RMD160 d9bd0459f206c61ff8fce9c6207b16555e13f02c SHA1 9c93d81b564d5f4ea5340bfeacb5efa6d850212a SHA256 43a6c85df4de59115356bb1f1b26a2678ad9f3ab91f6b7b72b0b91beb980df37
 MISC metadata.xml 702 RMD160 e0ab3bac531018b4b5cfb5d7d0da023a2224dfac SHA1 21135cb889825381cde64104e42af1394cc1defa SHA256 22b33253e42971dd67a36bc49e4ab2025d543a27d72400150c1f1b8cf7543d6c
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk30jvIACgkQzJrj3cAXR0nhqwCgm6IT2YOR1KsaOyedW+A5soSb
-N/sAnRPJP97bVHt+uztHojYAxMoqM+Rc
-=eNCV
+iEYEARECAAYFAk4CNNwACgkQzJrj3cAXR0mySQCeOWEqLupdRlh4+4dMyjk2Necq
+YXEAnj09bFF8/NWs+2u4y3wyte3bJLHC
+=FBAc
 -----END PGP SIGNATURE-----
